[package]
name = "rsenv"
version = "0.14.5"
edition = "2021"
description = "Hierarchical environment variable management"
keywords = ["development", "environment"]
repository = "https://github.com/sysid/rs-env"
readme = "../README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
camino = "1.1.9"
camino-tempfile = "1.1.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
clap_complete = "4.5.24"
colored = "2.1.0"
crossbeam = "0.8.4"
crossterm = "0.27.0"
ctor = "0.2.8"
env_logger = "0.11.5"
fs_extra = "1.3.0"
itertools = "0.12.1"
lazy_static = "1.5.0"
log = "0.4.22"
nom = "7.1.3"
pathdiff = { version = "0.2.1", features = ["camino"] }
regex = "1.10.6"
rstest = "0.19.0"
skim = "0.10.4"
stdext = "0.3.3"
termtree = "0.4.1"
walkdir = "2.5.0"

[dev-dependencies]

[package.metadata.test]
parallel = false
