[package]
name = "rsenv"
version = "0.14.6"
edition = "2021"
description = "Hierarchical environment variable management"
keywords = ["development", "environment"]
repository = "https://github.com/sysid/rs-env"
readme = "../README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
camino = "1.1.9"
camino-tempfile = "1.1.1"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
colored = "2.2.0"
crossbeam = "0.8.4"
crossterm = "0.27.0"
ctor = "0.2.9"
env_logger = "0.11.6"
fs_extra = "1.3.0"
itertools = "0.12.1"
lazy_static = "1.5.0"
nom = "7.1.3"
pathdiff = { version = "0.2.3", features = ["camino"] }
regex = "1.11.1"
rstest = "0.19.0"
skim = "0.10.4"
termtree = "0.4.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]

[package.metadata.test]
parallel = false
