[package]
name = "rsenv"
version = "5.1.3-alpha.0"
edition = "2021"
authors = ["sysid"]
description = "Unified development environment manager: hierarchical env vars, file guarding, and swap-in/out"
license = "BSD-3-Clause"
repository = "https://github.com/sysid/rsenv"
keywords = ["environment", "dotenv", "direnv", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Error handling
thiserror = "2"

# Serialization & Config
serde = { version = "1", features = ["derive"] }
config = "0.14"
toml = "0.8"
directories = "5"

# Filesystem
walkdir = "2"
pathdiff = "0.2"
shellexpand = "3"
fs_extra = "1"

# Interactive
skim = "0.10"

# Terminal output
colored = "2"

# Arena-based trees
generational-arena = "0.2"

# Utilities
regex = "1"
itertools = "0.13"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
rayon = "1"
chrono = "0.4"

# Hashing (for content-addressed encryption)
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tree display
termtree = "0.5"

# Temp files (for vimscript generation)
tempfile = "3"

[dev-dependencies]
rstest = "0.23"
